# Cpp_matematicka-knihovna

./: CMakeLists.txt  README.md  exe.txt  main.cpp
lib/: CMakeLists.txt
lib/Math/: CMakeLists.txt  Duration.cpp  Math.cpp  Time22.cpp
lib/Math/include/: Duration.h  Math.h  Point.h  Time22.h  Vector.h
lib/SimpleMath/: CMakeLists.txt  SimpleMath.cpp
lib/SimpleMath/include/: SimpleMath.h
test/: CMakeLists.txt  Math_test.cpp  SimpleMath_test.cpp  TimeTests.cpp
